--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,3 +281,67 @@ nav ul li {
     border: 2px solid var(--primary-color);
     cursor: pointer;
 }
+
+.socials {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 1%;
+    bottom: 50%;
+}
+
+.socicon {
+    width: 2rem;
+    height: 2rem;
+}
+
+footer {
+    background-color: var(--bg-color);
+    padding: 1.25rem;
+    text-align: center;
+    margin: 2rem 0 0;
+}
+
+.scroll-up {
+    position: fixed;
+    right: 0.5%;
+    bottom: 3%;
+    cursor: pointer;
+}
+
+.up-arrow {
+    width: 3rem;
+    height: 3rem;
+}
+
+@media screen and (max-width: 720px) {
+    /*changes reflects on screen with a width of 720px and below*/
+}
+
+nav {
+    padding: 1.5rem 1rem;
+}
+
+nav ul {
+    position: fixed;
+    background-color: var(--bg-color);
+    flex-direction: column;
+    top: 86px;
+    left: 10%;
+    width: 80%;
+    text-align: center;
+    transform: translateX(120%);
+    transition: transform 0.5s ease-in;
+}
+
+nav ul li {
+    margin: 8px;
+}
+
+.burger-menu {
+    display: block;
+}
+
+nav ul.show {
+    transform: translateX(0);
+}
