--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,6 @@
-@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap);
-:root {
-    --variable-name: value;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
 
-selector {
-    property: var(--variable-name);
-}
-
-
-/*Variables*/
+/* Variables */
 
 :root {
     --font-family: "Roboto", sans-serf;
@@ -27,7 +19,7 @@ selector {
 }
 
 
-/* Variables end*/
+/* Variables end */
 
 html {
     scroll-behavior: smooth;
@@ -40,6 +32,7 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* border: 2px solid red; */
 }
 
 ul {
@@ -58,6 +51,17 @@ a:hover {
 body {
     font-family: var(--font-family);
 }
+
+section {
+    /* max-width: 1100px;
+  margin: auto; */
+}
+
+
+/* CSS Resets end */
+
+
+/* Navbar */
 
 nav {
     position: sticky;
@@ -104,6 +108,12 @@ nav ul li {
     display: none;
 }
 
+
+/* Navbar ends */
+
+
+/* Hero section */
+
 .hero {
     display: flex;
     align-items: center;
@@ -134,6 +144,12 @@ nav ul li {
     padding: 0.3rem 0;
 }
 
+
+/* Hero section ends */
+
+
+/* More about */
+
 .more-about {
     background-color: var(--bg-color);
     padding: 1rem 6rem;
@@ -149,6 +165,12 @@ nav ul li {
     padding: 0.4rem;
 }
 
+
+/* More about ends */
+
+
+/* Skills section */
+
 .skills {
     max-width: 68.75rem;
     margin: auto;
@@ -156,7 +178,7 @@ nav ul li {
     margin-top: 2.5rem;
 }
 
-.skills-header {
+.skill-header {
     margin-bottom: 1rem;
 }
 
@@ -169,13 +191,11 @@ nav ul li {
     height: 11.25rem;
 }
 
-.icon-card {
-    background-color: #fff;
-    border-radius: 11px;
-    box-shadow: 0 3px 10px var(--secondary-shadow);
-    padding: 20px;
-    margin: 10px;
-}
+
+/* Skills section ends */
+
+
+/* Projects section */
 
 .projects {
     background-color: var(--bg-color);
@@ -217,13 +237,11 @@ nav ul li {
     margin-bottom: var(--bottom-margin);
 }
 
-.project-card {
-    background-color: #fff;
-    border-radius: 11px;
-    box-shadow: 0 3px 10px var(--primary-shadow);
-    padding: 20px;
-    margin: 10px;
-}
+
+/* Projects section ends */
+
+
+/* Contacts section */
 
 .contact {
     margin-top: 2rem;
@@ -264,6 +282,11 @@ nav ul li {
     outline: none;
 }
 
+.input-field::placeholder {
+    padding: 0.5rem;
+    color: var(--primary-color);
+}
+
 .submit-btn {
     width: 100%;
     padding: 10px;
@@ -282,6 +305,12 @@ nav ul li {
     cursor: pointer;
 }
 
+
+/* Contacts section ends */
+
+
+/* Social buttons */
+
 .socials {
     display: flex;
     flex-direction: column;
@@ -295,12 +324,11 @@ nav ul li {
     height: 2rem;
 }
 
-footer {
-    background-color: var(--bg-color);
-    padding: 1.25rem;
-    text-align: center;
-    margin: 2rem 0 0;
-}
+
+/* Social button ends */
+
+
+/* Scroll to top button */
 
 .scroll-up {
     position: fixed;
@@ -314,34 +342,118 @@ footer {
     height: 3rem;
 }
 
-@media screen and (max-width: 720px) {
-    /*changes reflects on screen with a width of 720px and below*/
-}
 
-nav {
-    padding: 1.5rem 1rem;
-}
+/* Scroll to top button ends */
 
-nav ul {
-    position: fixed;
+
+/* Footer section */
+
+footer {
     background-color: var(--bg-color);
-    flex-direction: column;
-    top: 86px;
-    left: 10%;
-    width: 80%;
+    padding: 1.25rem;
     text-align: center;
-    transform: translateX(120%);
-    transition: transform 0.5s ease-in;
+    margin: 2rem 0 0;
 }
 
-nav ul li {
-    margin: 8px;
+
+/* Footer section ends */
+
+
+/* General (utilities) */
+
+.icon-card {
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--secondary-shadow);
+    padding: 20px;
+    margin: 10px;
 }
 
-.burger-menu {
-    display: block;
+.project-card {
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--primary-shadow);
+    padding: 20px;
+    margin: 10px;
 }
 
-nav ul.show {
-    transform: translateX(0);
+
+/* Media queries for responsiveness */
+
+@media screen and (max-width: 720px) {
+    nav {
+        padding: 1.5rem 1rem;
+    }
+    nav ul {
+        position: fixed;
+        background-color: var(--bg-color);
+        flex-direction: column;
+        top: 86px;
+        left: 10%;
+        width: 80%;
+        text-align: center;
+        transform: translateX(120%);
+        transition: transform 0.5s ease-in;
+    }
+    nav ul li {
+        margin: 8px;
+    }
+    .burger-menu {
+        display: block;
+    }
+    nav ul.show {
+        transform: translateX(0);
+    }
+    .hero {
+        margin-top: -4rem;
+        flex-direction: column;
+        gap: 0;
+    }
+    .hero img {
+        height: 37.5rem;
+        width: 30rem;
+    }
+    .bio {
+        margin-top: -7rem;
+        width: 20.5rem;
+    }
+    .more-about {
+        margin-top: 2rem;
+        padding: 1rem 3.5rem;
+    }
+    .more-about h2 {
+        text-align: center;
+    }
+    .more-about p {
+        text-align: justify;
+    }
+    .icon {
+        width: 5.875rem;
+        height: 5.25rem;
+    }
+    .projects-container {
+        flex-direction: column;
+    }
+    .project-container {
+        width: 20.875rem;
+    }
+    .contact-form-container {
+        max-width: 23.75rem;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .hero img {
+        height: 37.5rem;
+        width: 23rem;
+    }
+    .bio {
+        width: 18.3rem;
+    }
+    .project-container {
+        width: 17.875rem;
+    }
+    .contact-form-container {
+        max-width: 17.75rem;
+    }
 }
